# MCP_CLOUD_HUCK

./: .backup_dir  .gitignore  GIT_PUSH_AND_PIPELINE_GUIDE.md  INTERACTIVE_MODE.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
ai-agent/: Dockerfile  README.md  pyproject.toml  pytest.ini  schemas.py
ai-agent/src/: __init__.py  a2a_wrapper.py  agent.py  api_server.py  start_a2a.py  structured_logging.py
frontend/: Dockerfile  app.py
frontend/.streamlit/: config.toml
mcp-server-1/: Dockerfile  README.md  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_server_catalog.yaml  mcp_tools.json  metrics.py  pyproject.toml  pytest.ini  server.py
mcp-server-1/tools/: __init__.py  contributors.py  github_health.py  issues_summary.py  utils.py
mcp-server-2/: Dockerfile  README.md  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp-server-2/tools/: __init__.py  comparison_tool.py  utils.py
mcp-server-3/: Dockerfile  README.md  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp-server-3/tools/: __init__.py  branch_analysis.py  commit_statistics.py  developer_activity.py
mcp-server-4/: Dockerfile  README.md  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp-server-4/tools/: __init__.py  code_search.py  dependencies.py  file_tree.py  utils.py
mcp-server-5/: Dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp-server-5/tools/: __init__.py  compliance_check.py  dependency_vulnerabilities.py  security_advisories.py
mcp-server-6/: Dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp-server-6/tools/: __init__.py  releases_summary.py  tags_analysis.py  utils.py  version_comparison.py
mcp-server-7/: Dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
mcp-server-7/tools/: __init__.py  activity_timeline.py  events_analysis.py  webhooks_list.py
