[project]
name = "github-repository-ai-agent"
version = "0.1.0"
description = "AI агент для анализа репозиториев GitHub с использованием MCP серверов"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.0",
    "langchain-openai==0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Явное указание пакетов
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

