[project]
name = "github-code-search-analysis"
version = "0.1.0"
description = "MCP сервер для поиска и анализа кода в репозиториях GitHub"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "aiolimiter>=1.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
# Автоматический поиск пакетов
packages = ["tools"]
py-modules = ["server", "mcp_instance", "metrics"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.setuptools.package-dir]
"" = "."
